[gd_scene load_steps=17 format=3 uid="uid://5g7byb24vjxk"]

[ext_resource type="Script" path="res://clipmap.gd" id="1_o76mq"]
[ext_resource type="Material" uid="uid://b2p03hdyvoa40" path="res://terrain_mat.tres" id="3_us76t"]
[ext_resource type="Script" path="res://player_controller.gd" id="4_11p6r"]
[ext_resource type="Script" path="res://debug_ui.gd" id="4_peme8"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6xijw"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_eu60i"]
sky_material = SubResource("ProceduralSkyMaterial_6xijw")

[sub_resource type="Environment" id="Environment_a2b87"]
background_mode = 2
sky = SubResource("Sky_eu60i")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_jxjho"]
size = Vector2(4000, 4000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q5067"]
transparency = 1
albedo_color = Color(0, 0.47451, 1, 0.6)
proximity_fade_enabled = true
proximity_fade_distance = 5.0

[sub_resource type="Curve" id="Curve_c2ul0"]
min_value = 1.0
max_value = 2.0
_data = [Vector2(0, 2), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_in8li"]
min_value = 1.0
max_value = 2.0
_data = [Vector2(0, 2), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_tuf71"]
min_value = 1.0
max_value = 2.0
_data = [Vector2(0, 2), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="BoxShape3D" id="BoxShape3D_56nns"]

[sub_resource type="BoxMesh" id="BoxMesh_nf6f5"]

[sub_resource type="BoxMesh" id="BoxMesh_ok0hl"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_anc2k"]
size = Vector3(0.2, 0.2, 1)

[node name="main" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.676876, 0.736097, 0, -0.736097, -0.676876, 0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_a2b87")

[node name="Terrain" type="Node3D" parent="." node_paths=PackedStringArray("_clipmap_target")]
script = ExtResource("1_o76mq")
_clipmap_target = NodePath("../Player")
_clipmap_height_scale = 500.0
_clipmap_height_offset = 90.0
_clipmap_levels_count = 7
_clipmap_collider_enable = true
_clipmap_collider_size = 64.0
_clipmap_collider_chunk_count = 1
_clipmap_target_position = Vector3(0.419565, 0, -0.563796)
_clipmap_vizualize_parts = true
_clipmap_shader_material = ExtResource("3_us76t")

[node name="UI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2
offset_left = 8.0
offset_top = 8.0
offset_right = 84.0
offset_bottom = 34.0
text = "TEST TEST"
script = ExtResource("4_peme8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("PlaneMesh_jxjho")
surface_material_override/0 = SubResource("StandardMaterial3D_q5067")

[node name="Player" type="RigidBody3D" parent="."]
unique_name_in_owner = true
mass = 50.0
continuous_cd = true
can_sleep = false
script = ExtResource("4_11p6r")
move_accel_dot = SubResource("Curve_c2ul0")
move_accel_max_force_dot = SubResource("Curve_in8li")
move_angle_dot = SubResource("Curve_tuf71")
move_jump_height = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("BoxShape3D_56nns")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("BoxMesh_nf6f5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.2, -0.5)
mesh = SubResource("BoxMesh_ok0hl")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Player/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.2, -0.5)
mesh = SubResource("BoxMesh_ok0hl")

[node name="LegL" type="Node3D" parent="Player/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/MeshInstance3D/LegL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
mesh = SubResource("BoxMesh_anc2k")

[node name="LegR" type="Node3D" parent="Player/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/MeshInstance3D/LegR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
mesh = SubResource("BoxMesh_anc2k")

[node name="AxisLock" type="Node3D" parent="Player"]

[node name="CameraController" type="Node3D" parent="Player/AxisLock"]

[node name="Camera3D" type="Camera3D" parent="Player/AxisLock/CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
